[package]
name = "commitsparkles"
version = "0.1.0"
authors = ["Richard Fortescue-Webb <rfwebb@gmail.com>"]

[dependencies]
iron = "*"
mount = "0.2.1"
staticfile = "0.2.0"
router = "*"
log4rs = { version = "0.4.3", features = [ "toml" ] }
log = "*"
logger = "*"
toml = "*"
docopt = "*"
rustc-serialize = "*"
bodyparser = "*"
serde = "0.7.5"
serde_json = "0.7.1"
serde_macros = "0.7.5"
persistent = "*"
hyper = "*"
url = "*"
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
