[package]
name = "commitsparkles"
version = "0.1.0"
authors = ["Richard Fortescue-Webb <rfwebb@gmail.com>"]

[dependencies]
iron = "*"
mount = "*"
staticfile = "*"
router = "*"
log4rs = "*"
log = "*"
logger = "*"
toml = "*"
docopt = "*"
bodyparser = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
persistent = "*"
reqwest = "*"
url = "*"
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"

